PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
09 Jul 2015, PHP 7.0.0 Beta 1

- Core:
  . Fixed bug #69976 (Unable to parse "all" urls with colon char). (cmb)
  . Improved zend_string API (Francois Laupretre)
  . Fixed bug #69768 (escapeshell*() doesn't cater to !). (cmb)
  . Fixed bug #69955 (Segfault when trying to combine [] and assign-op on
    ArrayAccess object). (Laruence)

- CLI server:
  . Fixed bug #69655 (php -S changes MKCALENDAR request method to MKCOL). (cmb)
  . Fixed bug #64878 (304 responses return Content-Type header). (cmb)

- COM:
  . Fixed bug #69939 (Casting object to bool returns false). (Kalle)

- JSON
  . Fixed bug #62010 (json_decode produces invalid byte-sequences).
	(Jakub Zelenka)

- OCI8:
  . Corrected oci8 hash destructors to prevent segfaults, and a few other fixes.
    (Cameron Porter)

- OpenSSL:
  . Fixed bug #69882 (OpenSSL error "key values mismatch" after
    openssl_pkcs12_read with extra cert) (Tomasz Sawicki)

- PCRE:
  . Fixed bug #53823 (preg_replace: * qualifier on unicode replace garbles the
    string). (cmb)

- Session:
  . Fixed bug #69952 (Data integrity issues accessing superglobals by
    reference). (Bob)

25 Jun 2015, PHP 7.0.0 Alpha 2

- Core:
  . Fixed bug #69872 (uninitialised value in strtr with array). (Laruence)
  . Fixed bug #69868 (Invalid read of size 1 in zend_compile_short_circuiting).
    (Laruence)
  . Fixed bug #69849 (Broken output of apache_request_headers). (Kalle)
  . Fixed bug #69840 (iconv_substr() doesn't work with UTF-16BE). (Kalle)
  . Fixed bug #69823 (PHP 7.0.0alpha1 segmentation fault when exactly 33
    extensions are loaded). (Laruence)
  . Fixed bug #69805 (null ptr deref and seg fault in zend_resolve_class_name).
    (Laruence)
  . Fixed bug #69802 (Reflection on Closure::__invoke borks type hint class
    name). (Dmitry)