@@ -57,8 +57,6 @@ ZEND_API void zend_object_std_dtor(zend_object *object)
 	if (object->properties) {
 		if (EXPECTED(!(GC_FLAGS(object->properties) & IS_ARRAY_IMMUTABLE))) {
 			if (EXPECTED(--GC_REFCOUNT(object->properties) == 0)) {
-				GC_REMOVE_FROM_BUFFER(object->properties);
-				GC_TYPE_INFO(object->properties) = IS_NULL | (GC_WHITE << 16);
 				zend_array_destroy(object->properties);
 			}
 		}
